--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
