--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.28.1"
